--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 layout: default
 title: SFB | About
 style: styles/style.css
-desc: SFB | About
+desc: All about Senty
 fullTitle: Hi, I'm Senty.
+pathFavicon: ./assets/SFB-4.png
 ---
 
 <div class="page">
     <h1>Hi, I'm Senty.</h1>
     <h2>An idiot.</h2> 
     <p>I do things, including but not limited to:</p>
-    <a href="./polls/christmas24.html">A poll</a>
+    <a href="/polls/christmas24">A poll</a>
+    <p></p>
 </div>
