--- a/polls/christmas24.html
+++ b/polls/christmas24.html
@@ -1,21 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style/style.css">
-    <meta property="og:url" content="https://sentyfunball.github.io/sentyfunball">
-    <meta property="og:title" content="Were you Naughty or Nice?">
-    <meta property="og:image" content="../assets/SFB-4.png">
-    <meta property="og:description" content="I ran a poll for Christmas. Let's see the results">
-    <link rel="icon" href="assets/SFB-4.png">
-    <title>Christmas 2024 Poll Results</title>
-</head>
-<body>
-    <body>
-        <div class="page">
-            <h1>I ran a poll. Let's see the results.</h1>
-        </div>
-    </body>
-</body>
-</html>
+---
+layout: default
+title: SW Naughty or Nice Results
+style: ../../styles/style.css
+desc: I ran a poll for Christmas. Let's see the results.
+fullTitle: Stormworks Naughty or Nice
+pathFavicon: ../../assets/SFB-4.png
+---
+
+<div class="pageNoBG">
+    <h1>I ran a poll for Christmas. Let's see the results.</h1>
+    <h1>Coming soon.</h1>
+    <p>For now, fill out the poll <a href="https://forms.gle/9zhiQza9rLgGoFSp6">here</a>.</p>
+</div>
