--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@ pathFavicon: ./assets/SFB-4.png
     <h1>Hi, I'm Senty.</h1>
     <h2>An idiot.</h2> 
     <p>I do things, including but not limited to:</p>
-    <a href="./polls/christmas24.html">A poll</a>
+    <a href="./polls/christmas24">A poll</a>
     <p></p>
 </div>
