--- a/polls/christmas24.html
+++ b/polls/christmas24.html
@@ -5,6 +5,7 @@ style: ../../styles/style.css
 desc: I ran a poll for Christmas. Let's see the results.
 fullTitle: Stormworks Naughty or Nice
 pathFavicon: ../../assets/SFB-4.png
+pathIndex: ../../../index
 ---
 
 <div class="pageNoBG">
