--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ style: styles/style.css
 desc: All about Senty
 fullTitle: Hi, I'm Senty.
 pathFavicon: ./assets/SFB-4.png
-pathIndex: ./
+pathIndex: ./index
 ---
 
 <div class="page">
