--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@ pathIndex: ./index
     <h2>An idiot.</h2> 
     <p>I do things, including but not limited to:</p>
     <a href="./polls/christmas24">A poll</a>
+    <br>
+    <a href="https://steamcommunity.com/id/sentyfb/myworkshopfiles/?appid=573090">Stormworks vehicles</a>
     <p></p>
 </div>
