--- a/polls/christmas24.html
+++ b/polls/christmas24.html
@@ -39,10 +39,10 @@ pathIndex: ../../index
         <div class="result border">
             <h2>Insights</h2>
             <p>A total of 180 people took the quiz. Holy hell. I only expected maybe 25. As you'd expect, the total point distribution is a bell curve. Of course it is. With an average score of <b>12.6/16 (78%)</b>, most people passed the quiz. I set the passing threshold to be 11 points, ~69%. The median was 13 points, with 45 people getting that many points.</p>
-            <img src="./../assets/img/polls/christmas24/1.png">
+            <img src="./../../assets/img/polls/christmas24/1.png">
             <p>Particular shoutout to the two people who got 6 points and the one guy who got 18 points for a particularly good food answer involving good bacon. You know who you are. On the bright side, most people answered this form seriously. Some did not. I am not happy with those people.</p>
             <br>
-            <img src="./../assets/img/polls/christmas24/2.png">
+            <img src="./../../assets/img/polls/christmas24/2.png">
             <p>My favorite part of looking at the overall results is seeing the just awful rates on some questions. I marked the correct answer for "Do you own Space DLC" as being "No", and since <b>~60%</b> of people own it, most got that wrong. You're all wrong. </p>
         </div>
         <h2>Questions</h2>
@@ -54,7 +54,7 @@ pathIndex: ../../index
         <div class="result border">
             <h3>Are you a part of SPL?</h3>
             <p>I only made a small mistake on this one. I thought more people would know what SPL is. The moment I posted the poll to Reddit, the number of "What's SPL" answers doubled, and then tripled.</p>
-            <img src="./../assets/img/polls/christmas24/3.png">
+            <img src="./../../assets/img/polls/christmas24/3.png">
             <p><b>11% of players</b> are in SPL? That can't be right. Maybe posting the form in SPL (ShitPost Lane, in case you're wondering. It's a Discord server) wasn't my brightest idea. Don't worry, an estimated 0.023% of all Stormworks players answered the poll. I don't have any remarks. Most people don't know what an obscure Discord server with only a couple hundred members (if that) is. Whoda thunk?</p>
         </div>
         <div class="result border">
@@ -78,7 +78,7 @@ pathIndex: ../../index
             <h3>Favorite Major Update?</h3>
             <p>I only listed some of the major updates that Stormworks has had. I decided to only list 1.0 and after because 1) I didn't want too many options and 2) Most people have joined the game after 1.0. Most people liked the Weapons DLC, for good reason. It's also the highest rated DLC, and at one point I think it was higher rated than the base game itself on Steam.</p>
             <p>The top five updates are: Weapons, Modular Engines, Modding, 1.0, and Industry. Weapons has the plurality with <b>35% of players saying it's their favorite.</b></p>
-            <img src="./../assets/img/polls/christmas24/4.png">
+            <img src="./../../assets/img/polls/christmas24/4.png">
         </div>
         <div class="result border">
             <h3>What do you hope the NEXT Major Update is?</h3>
@@ -130,7 +130,7 @@ pathIndex: ../../index
         <div class="result border">
             <h3>How many hours do you have?</h3>
             <p>I'll just post the image.</p>
-            <img src="./../assets/img/polls/christmas24/5.png">
+            <img src="./../../assets/img/polls/christmas24/5.png">
             <p>The elf and I thought it would be funny to set the correct results to be from 2000 to 8000 hours. Originally I had it 1000 hours and up was correct. Anyway, most people have less hours than that it seems. <b>35% of people have less than 1000 hours. 22% have 1000-2000 hours. 37% have 2000-8000 hours (the correct answer). 5% have more than 8k.</b> Those are insane people, with over 8k. I <i>only</i> have 5600. Crazy people, over 6000 hours.</p>
         </div>
         <div class="result border">
@@ -140,19 +140,19 @@ pathIndex: ../../index
         <div class="result border">
             <h3>Logic or Lua?</h3>
             <p>This is the only one where I'm distraught about the results. I love Lua! What do you mean people find it scary? What do you mean only <b>30% of people prefer Lua?</b> How? I'm just kidding - mostly - I understand logic is easier to set up usually. Even excluding displays, Lua is so much easier to do complex math on, such as matrix math. Why isn't the matrix library in vehicle Lua? Same with vectors. Those should be added with a higher char limit.</p>
-            <img src="./../assets/img/polls/christmas24/6.png">
+            <img src="./../../assets/img/polls/christmas24/6.png">
             <p>I can't believe it.</p>
         </div>
         <div class="result border">
             <h3>Are you C4V Engineering?</h3>
-            <img src="./../assets/img/polls/christmas24/7.png">
+            <img src="./../../assets/img/polls/christmas24/7.png">
             <p>Why. Would would anyone impersonate C4V of all people? This question was the elf's idea, to instantly mark anyone who said they were C4V as naughty. C4V was marked naughty, but ironically not for this reason. The handful of people who said they were C4V, I like your style.</p>
         </div>
         <div class="result border">
             <h3>Oh, and the presents?</h3>
             <p>Damn straight we're giving presents away. Nine possible presents: a car bomb, coal, nutcracker, christmas tree, snowball cannon, candy cane, sleigh with reindeer, a "present", and a free Project 710 Class Fast Attack Submarine, neatly wrapped with a bow!</p>
             <p>If you want to see what you got, view your results with the button just below.</p>
-            <img src="./../assets/img/polls/christmas24/8.png">
+            <img src="./../../assets/img/polls/christmas24/8.png">
         </div>
         <div class="result">
             <h2>And now for some Honorable Mentions</h2>
@@ -172,5 +172,5 @@ pathIndex: ../../index
         </div>
     </div>
     <br>
-    <script src="./polls/js/buttonhandler.js"></script>
+    <script src="./../polls/js/buttonhandler.js"></script>
 </div>
