--- a/polls/christmas24.html
+++ b/polls/christmas24.html
@@ -172,5 +172,5 @@ pathIndex: ../../index
         </div>
     </div>
     <br>
-    <script src="./../polls/js/buttonhandler.js"></script>
+    <script src="./../../polls/js/buttonhandler.js"></script>
 </div>
