--- a/polls/c24pollresponse.html
+++ b/polls/c24pollresponse.html
@@ -10,7 +10,7 @@ pathIndex: ../../index
 
 <div class="pageNoBG">
     <div class="buttonBox">
-        <button onclick="userRedirect('christmas24')"><h3>Back to results</h3></button>
+        <button onclick="userRedirect('./christmas24')"><h3>Back to results</h3></button>
     </div>
     <div class="recap">
         <div class="centered">
@@ -131,6 +131,6 @@ pathIndex: ../../index
         </div>
     </div>
     <br><br>
-    <script src="/polls/js/buttonhandler.js"></script>
-    <script src="/polls/js/christmas24.js"></script>
+    <script src="./../../polls/js/buttonhandler.js"></script>
+    <script src="./../../polls/js/christmas24.js"></script>
 </div>
