--- a/polls/christmas24.html
+++ b/polls/christmas24.html
@@ -17,7 +17,7 @@ pathIndex: ../../index
         <div class="centered">
             <h2>Take a look at your results</h2>
             <div class="buttonBox" style="position: relative; left: 20vw;">
-                <button onclick="userRedirect('./c24pollresponse')"><h3>Let's go</h3></button>
+                <button onclick="userRedirect('c24pollresponse')"><h3>Let's go</h3></button>
             </div>
         </div>
         <h2>Recap</h2>
@@ -168,7 +168,7 @@ pathIndex: ../../index
     <div class="centered">
         <h2>Take a look at your results</h2>
         <div class="buttonBox" style="position: relative; left: 20vw;">
-            <button onclick="userRedirect('./c24pollresponse')"><h3>Let's go</h3></button>
+            <button onclick="userRedirect('c24pollresponse')"><h3>Let's go</h3></button>
         </div>
     </div>
     <br>
