maybe hopefully fix css

--- a/polls/c24pollresponse.html
+++ b/polls/c24pollresponse.html
@@ -8,6 +8,7 @@ pathFavicon: ../../assets/SFB-4.png
 pathIndex: ../../index
 ---
 
+<link rel="stylesheet" href="../../styles/style.css">
 <div class="pageNoBG">
     <div class="buttonBox">
         <button onclick="userRedirect('../christmas24')"><h3>Back to results</h3></button>
