--- a/polls/christmas24.html
+++ b/polls/christmas24.html
@@ -8,6 +8,7 @@ pathFavicon: ../../assets/SFB-4.png
 pathIndex: ../../index
 ---
 
+<link rel="stylesheet" href="../../styles/style.css">
 <div class="pageNoBG">
     <div class="recap">
         <div class="centered">
