fix minor issues

--- a/polls/christmas24.html
+++ b/polls/christmas24.html
@@ -88,7 +88,7 @@ pathIndex: ../../index
         </div>
         <div class="result border">
             <h3>Do you own Stormworks: Space?</h3>
-            <p>Ah, space. The final frontier. And by most, the worst update! Turns out a lot of people own space. <b>61%, in fact.</b> I do hear the new components are good. At I would like to update my self-landing space rocket to use a liquid fuel engine instead of a jet engine at some point. Too bad I can't mod them in.</p>
+            <p>Ah, space. The final frontier. And by most, the worst update! Turns out a lot of people own space. <b>61%, in fact.</b> I do hear the new components are good. And I would like to update my self-landing space rocket to use a liquid fuel engine instead of a jet engine at some point. Too bad I can't mod them in.</p>
         </div>
         <div class="result border">
             <h3>Have you ever committed a warcrime? (In Stormworks)</h3>
