add sentos page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ pathIndex: ./index
     <p>I do things, including but not limited to:</p>
     <a href="./polls/christmas24">A poll</a>
     <br>
+    <a href="./projects/sentos">SenTOS - A Discord Bot</a>
+    <br>
     <a href="https://steamcommunity.com/id/sentyfb/myworkshopfiles/?appid=573090">Stormworks vehicles</a>
     <p></p>
 </div>
