--- a/projects/sentos.html
+++ b/projects/sentos.html
@@ -7,25 +7,27 @@ fullTitle: SenTOS - A Discord Bot
 pathFavicon: ../../assets/SFB-4.png
 pathIndex: ../../index
 ---
-
+<link rel="stylesheet" type="text/css" href="../styles/style.css">
 <div class="page">
     <h1>SenTOS - A Discord Bot</h1>
     <h2>What is SenTOS?</h2> 
     <p>SenTOS is a Discord bot made by my stupid ass. It is currently in development, and is not yet available for public use, however is in a handful of servers for testing purposes.</p>
-    <h2>Features</h2>
-    <ul>
-        <li>An advanced Score system for users to track their activity, optionally punishing bad behavior</li>
-        <li>Fun stuff like polls and a leaderboard</li>
-        <li>An AI chatbot powered by OpenAI's GPT models</li>
-    </ul>
-    <h2>Development</h2>
-    <p>SenTOS is being developed using JavaScript and the Discord.js library. It is hosted on SentyTek's private servers.</p>
-    <h2>Privacy Notice</h2>
-    <p>SenTOS (Referred to as "The Bot" or "Bot"), while using the AI chatbot, processes Discord messages and public facing user status information to generate responses using OpenAI's API.</p>
-    <p>We do not store or share this information with third parties, nor build profiles on our users.</p>
-    <p>Data is transmitted to OpenAI for message processing and is subject to their <a href="https://openai.com/policies/privacy-policy">Privacy Policy</a>.</p>
-    <p>By using the Bot, you agree to this Privacy Notice and consent to the processing of your data as described herein.</p>
-    <p>You may request confirmation that no data is retained at any time by contacting SentyFunball on Discord.</p>
+    <div class="lalign">
+        <h2>Features</h2>
+        <ul class="blist">
+            <li><p>An advanced Score system for users to track their activity, optionally punishing bad behavior</p></li>
+            <li><p>Fun stuff like polls and a leaderboard</p></li>
+            <li><p>An AI chatbot powered by OpenAI's GPT models</p></li>
+        </ul>
+        <h2>Development</h2>
+        <p>SenTOS is being developed using JavaScript and the Discord.js library. It is hosted on SentyTek's private servers.</p>
+        <h2>Privacy Notice</h2>
+        <p>SenTOS (Referred to as "The Bot" or "Bot"), while using the AI chatbot, processes Discord messages and public facing user status information to generate responses using OpenAI's API.</p>
+        <p>We do not store or share this information with third parties, nor build profiles on our users.</p>
+        <p>Data is transmitted to OpenAI for message processing and is subject to their <a href="https://openai.com/policies/privacy-policy">Privacy Policy</a>.</p>
+        <p>By using the Bot, you agree to this Privacy Notice and consent to the processing of your data as described herein.</p>
+        <p>You may request confirmation that no data is retained at any time by contacting SentyFunball on Discord.</p>
+    </div>
     <h2>Contact</h2>
     <p>If you have any questions or suggestions, please contact me via Discord: @sentyfunball</p>
 </div>
