--- a/polls/christmas25.html
+++ b/polls/christmas25.html
@@ -9,12 +9,10 @@ pathIndex: ../../index
 ---
 
 <link rel="stylesheet" href="../../styles/style.css">
-<div class="pageNoBG">
+<div class="page">
     <h1>SW 2 Naughty 2 Nice '25</h1>
     <h2>Results coming soon</h2>
-    <div id="countdown">
-
-    </div>
+    <p id="countdown"></p>
     <p>December 20, 2025, 12:00 PM PT </p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTeGyyeligHYumEwrIAF-GG3N8FWlcj7pxLZ1QwnypF9cOJQ/viewform?usp=dialog">Take the quiz now</a>
     <script src="./../../polls/js/countdown.js"></script>
