--- a/polls/christmas25.html
+++ b/polls/christmas25.html
@@ -14,6 +14,6 @@ pathIndex: ../../index
     <h2>Results coming soon</h2>
     <p id="countdown"></p>
     <p>December 20, 2025, 12:00 PM PT </p>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTeGyyeligHYumEwrIAF-GG3N8FWlcj7pxLZ1QwnypF9cOJQ/viewform?usp=dialog">Take the quiz now</a>
+    <a href="https://forms.gle/C14ECYejUUvivE3aA">Take the quiz now</a>
     <script src="./../../polls/js/countdown.js"></script>
 </div>
