--- a/polls/christmas25.html
+++ b/polls/christmas25.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: SW 2 Naughty 2 Nice '25
+title: SW 2 Naughty 2 Nice 25
 style: ../../styles/style.css
 desc: Results coming soon
-fullTitle: Stormworks Naughty or Nice 2025: Coming soon
+fullTitle: Stormworks Naughty or Nice 2025 Coming soon
 pathFavicon: ../../assets/SFB-4.png
 pathIndex: ../../index
 ---
