--- a/polls/christmas24.html
+++ b/polls/christmas24.html
@@ -159,6 +159,13 @@ pathIndex: ../../index
             <p>Thank you to everyone for doing this stupid project. See you next time.</p>
         </div>
     </div>
+    
+    <div id="imageModal" class="modal">
+        <span class="modal-close">&times;</span>
+        <img class="modal-content" id="modalImage">
+    </div>
+
     <br>
     <script src="./../../polls/js/buttonhandler.js"></script>
+    <script src="./../../polls/js/modalhandler.js"></script>
 </div>
