fix buttons & css

--- a/polls/christmas25.html
+++ b/polls/christmas25.html
@@ -18,7 +18,7 @@ pathIndex: ../../index
     <div class="centered">
         <h2>Take a look at your results</h2>
         <div class="buttonBox" style="position:relative; left:20vw;">
-            <button onclick="userRedirect('./c25personalized.html')"><h3>Let's go</h3></button>
+            <button onclick="userRedirect('../c25personalized.html')"><h3>Let's go</h3></button>
         </div>
     </div>
     <h2>Recap</h2>
@@ -205,7 +205,7 @@ pathIndex: ../../index
 <div class="centered">
     <h2>Take a look at your results</h2>
     <div class="buttonBox" style="position:relative; left:20vw;">
-        <button onclick="userRedirect('./c25personalized.html')"><h3>Let's go</h3></button>
+        <button onclick="userRedirect('../c25personalized.html')"><h3>Let's go</h3></button>
     </div>
 </div>
 
