fix buttons again

--- a/polls/c25personalized.html
+++ b/polls/c25personalized.html
@@ -11,7 +11,7 @@ pathIndex: ../../index
 <link rel="stylesheet" href="../../styles/style.css">
 <div class="pageNoBG">
     <div class="buttonBox">
-        <button onClick="userRedirect('../christmas25.html')"><h3>Back to Results</h3></button>
+        <button onClick="userRedirect('../christmas25')"><h3>Back to Results</h3></button>
     </div>
     <div class="recap">
         <div class="centered">
